# cpp_templates

./: CMakeLists.txt
src/: main.cpp
